Test/dafny0/ModulesCycle.dfy.expect
ModulesCycle.dfy(5,9): Error: module T does not exist
ModulesCycle.dfy(8,7): Error: module definition contains a cycle (note: parent modules implicitly depend on submodules): A -> D -> C -> B
2 resolution/type errors detected in c:\codeplex\dafny\Test\dafny0\ModulesCycle.dfy
